<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>

    <string name="preference">Preferences</string>
    <string name="preference_about">About</string>
    <string name="preference_other">Others</string>
    <string name="preference_rate">Rate</string>
    <string name="preference_rate_summary">Please rate this app</string>
    <string name="preference_version">Build Version</string>
    <string name="preference_license">Open Source License</string>
    <string name="preference_license_version">Source License Apache 2.0</string>

    <string name="theme">Themes</string>
    <string name="theme_summary">Change app theme</string>
    <string name="theme_midas">Midas</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_red">Red</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_green">Green</string>
    <string name="theme_purple">Purple</string>

    <string name="please_wait">Please wait ...</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
</resources>
