<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/theme">

        <CheckBoxPreference android:key="themes_midas"
            android:checked="true"
            android:defaultValue="midas"
            android:title="@string/theme_midas"/>

        <CheckBoxPreference android:key="themes_blue"
            android:checked="true"
            android:defaultValue="blue"
            android:title="@string/theme_blue"/>

        <CheckBoxPreference android:key="themes_red"
            android:checked="true"
            android:defaultValue="red"
            android:title="@string/theme_red"/>

        <CheckBoxPreference android:key="themes_orange"
            android:checked="true"
            android:defaultValue="orange"
            android:title="@string/theme_orange"/>

        <CheckBoxPreference android:key="themes_green"
            android:checked="true"
            android:defaultValue="green"
            android:title="@string/theme_green"/>

        <CheckBoxPreference android:key="themes_purple"
            android:checked="true"
            android:defaultValue="purple"
            android:title="@string/theme_purple"/>
    </PreferenceCategory>
</PreferenceScreen>